--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           $( function() {
             
             $( ".widget input[type=submit], .widget a, .widget button" ).button();
-            $( "button, input, a" ).click( function( event ) {
+            $( "input, a" ).click( function( event ) {
               event.preventDefault();
             } );
             
