--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>blockchain</title>
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        <link rel="stylesheet" href="/css/style.css">
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script>
@@ -36,16 +37,6 @@
         <h1>Widget Buttons</h1>
         <button id="btn1">버튼1</button>
         <button id="btn2">버튼2</button>
-
-        <input type="submit" value="A submit button">
-
-        <a href="#">An anchor</a>
       </div>
-      <h1>CSS Buttons</h1>
-      <button class="ui-button ui-widget ui-corner-all" id="button1">A button element</button>
-
-      <input class="ui-button ui-widget ui-corner-all" type="submit" value="A submit button">
-
-      <a class="ui-button ui-widget ui-corner-all" href="#">An anchor</a>
     </body>
 </html>
