--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
     <body>
       <div class="widget">
         <h1>Widget Buttons</h1>
-        <button id="btn1">버튼1</button>
-        <button id="btn2">버튼2</button>
+        <span>
+          <button id="btn1" class="w200">버튼1</button>
+        </span>
+        <span>
+          <button id="btn2" class="w200">버튼2</button>
+        </span>
       </div>
     </body>
 </html>
