--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <body>
       <div class="widget">
         <h1>Widget Buttons</h1>
-        <span>
+        <span class="btn">
           <button id="btn1" class="w200">버튼1</button>
         </span>
-        <span>
+        <span class="btn">
           <button id="btn2" class="w200">버튼2</button>
         </span>
       </div>
