--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
               $("#btn2").button().on("click", function(event) {
                   console.log('button', 'certRevoc');
-                  Native.api.createCert({hash:ci});
+                  Native.api.certRevoc({hash:ci});
               });
           });
 
