--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                   console.log('button', 'certRevoc');
                   Native.api.certRevoc({hash:ci});
               });
+            
+              init();
           });
 
         </script>
