--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           $(document).ready(function() {
               $("#btn1").button().on("click", function(event) {
                   console.log('button', 'createCert');
-                  Native.api.createCert({name:'서*영', hash:ci});
+                  Native.api.createCert({name:'서*영', hash:ci, deviceNo: '01033548778', eMail: 'jy836979@gmail.com'});
               });
 
               $("#btn2").button().on("click", function(event) {
