--- a/ata.html
+++ b/ata.html
@@ -61,7 +61,7 @@
         <h1>앱투앱 인증</h1>
           
         <span class="btn">
-          <button id="signup" class="w200">인증서발급</button>
+          <button id="signup" class="w200">회원가입</button>
         </span>
 
       </div>
