--- a/index.html
+++ b/index.html
@@ -136,7 +136,12 @@
     </head>
     <body>
       <div class="widget">
-        <h1>Widget Buttons</h1>
+        <h1>앱투앱인증</h1>
+        <span class="btn">
+          <button id="signup" class="w200">회원가입</button>
+        </span>
+        
+        <h1>인증서</h1>
         <span class="btn">
           <button id="btn1" class="w200">인증서발급</button>
         </span>
