--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             
           } );
           
-          Native.event.notification(function(noti){
+          Native.event.registNotification(function(noti){
             console.log('notification',noti);
             alert(JSON.stringfy(noti));
           });
