--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           
           Native.event.registNotification(function(noti){
             console.log('notification',noti);
-            alert(JSON.stringfy(noti));
+            alert(JSON.stringify(noti));
           });
           
           function init() {
