--- a/index.html
+++ b/index.html
@@ -305,7 +305,8 @@
               });
               $("#CORP_MULTI_AUTH_SELECT").button().on("click", function(event) {
                   console.log('button', this.textContent);
-
+                  if(cert.length == 0){ return alert('선택된 인증서가 없습니다.')}
+                  Native.api.multiAuthSelectCorp(cert);
               });
 
               $("#CORP_CERT_REVOC").button().on("click", function(event) {
