--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                   } else if(window.webkit
                         && window.webkit.messageHandlers
                         && window.webkit.messageHandlers.api) {
-                      location.href="naversearchapp://default?version=1"
+                      location.href="naversearchapp://default?version=1#store_id=id393499958?mt=8"
                   }
 
               });
