--- a/index.html
+++ b/index.html
@@ -150,11 +150,18 @@
 //                   Native.api.locationDeniedAlert();     
                   
                   Native.api.launchApp({
-                      packageName: "intent://default?version=5#Intent;scheme=naversearchapp;action=android.intent.action.VIEW;category=android.intent.category.BROWSABLE;package=com.nhn.android.search;end",
+                      intent: "intent://default?version=5#Intent;scheme=naversearchapp;action=android.intent.action.VIEW;category=android.intent.category.BROWSABLE;package=com.nhn.android.search;end",
                       scheme: "naversearchapp://default?version=1",
                       success: function(){},
                       error: function(){
-                         alert("사용앱이 없습니다.");
+                          if(!confirm("사용앱이 없습니다. 앱스토어로 이동하시겠습니까?")) return;
+                          Native.api.goStore({
+                              packageName: "com.nhn.android.search",
+                              storeId: "id393499958",
+                              success: function(){},
+                              error: function(){}
+                          })
+                          
                       }
                   })
               });
