--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 //                   Native.api.locationDeniedAlert();     
                   
                   Native.api.launchApp({
-                      intent: "intent://default?version=5#Intent;scheme=naversearchapp;action=android.intent.action.VIEW;category=android.intent.category.BROWSABLE;package=com.nhn.android.search;end",
+                      intentUrl: "intent://default?version=5#Intent;scheme=naversearchapp;action=android.intent.action.VIEW;category=android.intent.category.BROWSABLE;package=com.nhn.android.search;end",
                       scheme: "naversearchapp://default?version=1",
                       success: function(){},
                       error: function(){
