--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
                       success: function(result){
                           if(result) {
                               pushCnt++;
-                              alert("앱 설치됨 [ 스키마 : "+scheme+", 회수 : "+pushCnt+" ]");
+                              alert("앱 설치됨 [ 스키마 : naversearchapp, 회수 : "+pushCnt+" ]");
                           } else {
-                              alert("앱 설치됨 [ 스키마 : "+scheme+", 회수 : "+pushCnt+" ]");
+                              alert("앱 설치됨 [ 스키마 : naversearchapp, 회수 : "+pushCnt+" ]");
                           }
                       },
                       error: function(){
