--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                               pushCnt++;
                               alert("앱 설치됨 [ 스키마 : naversearchapp, 회수 : "+pushCnt+" ]");
                           } else {
-                              alert("앱 설치됨 [ 스키마 : naversearchapp, 회수 : "+pushCnt+" ]");
+                              alert("앱 설치 안됨 [ 스키마 : naversearchapp, 회수 : "+pushCnt+" ]");
                           }
                       },
                       error: function(){
