--- a/index.html
+++ b/index.html
@@ -149,6 +149,15 @@
 //                   Native.callback.locationDeniedAlertError = function() {alert("error")};
 //                   Native.api.locationDeniedAlert();     
 
+                  Native.api.launchApp({
+                      intentUrl: "intent://default?version=5#Intent;scheme=naversearchapp;action=android.intent.action.VIEW;category=android.intent.category.BROWSABLE;package=com.nhn.android.search;end",
+                      scheme: "naversearchapp://default?version=1",
+                      success: function(){},
+                      error: function(){
+                        alert("사용앱이 없습니다.")
+            	     }
+                  });
+                  /*
                   Native.api.isInstalledApp({
                       package: "com.nhn.android.search",
                       scheme: "naversearchapp://default?version=1",
@@ -171,6 +180,7 @@
                           
                       }
                   })
+                  */
               });
               
               $('#signup').click(function(){
