--- a/index.html
+++ b/index.html
@@ -148,7 +148,19 @@
 //                   Native.callback.locationDeniedAlertSuccess = function() {alert("success")};
 //                   Native.callback.locationDeniedAlertError = function() {alert("error")};
 //                   Native.api.locationDeniedAlert();     
+                  
+                  Native.api.launchApp({
+                    scheme: "naversearchapp://search?qmenu=smartbyimage#34;mode=qrpay&version=4",
+                    success: function(){
 
+                    },
+                    error: function(error){
+                      fullSpinOff();
+                      toast('제로페이 앱 실행에 실패하였습니다. 잠시 후에 다시 시도해 주세요.(E00)');
+                    }
+                  });
+                  
+                  /*  
                   Native.api.launchApp({
                       intentUrl: "intent://default?version=5#Intent;scheme=naversearchapp;action=android.intent.action.VIEW;category=android.intent.category.BROWSABLE;package=com.nhn.android.search;end",
                       scheme: "naversearchapp://default?version=1",
@@ -156,7 +168,7 @@
                       error: function(){
                         alert("사용앱이 없습니다.")
             	     }
-                  });
+                  });*/
                   /*
                   Native.api.isInstalledApp({
                       package: "com.nhn.android.search",
