--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 //                   Native.api.locationDeniedAlert();     
                   
                   Native.api.launchApp({
-                    scheme: "naversearchapp://search?qmenu=smartbyimage#34;mode=qrpay#34;version=4",
+                    scheme: "naversearchapp://search?aasdfasdfsdfdsfa!!",
                     success: function(){
 
                     },
