--- a/index.html
+++ b/index.html
@@ -304,7 +304,17 @@
                   console.log('button', 'certMngAddPattern');
                   Native.api.certMngAddPattern({hash:ci});
               });
-            
+              $("#CERT_ISSUE_DATE").button().on("click", function(event) {
+                  console.log('button', '인증서 발급일자 조회');
+                  Native.api.getCertificateIssueDate({
+                    success: function(result){
+                      alert("[성공] "+JSON.stringify(result));
+                    },
+                    error: function(result){
+                      alert("[실패] "+JSON.stringify(result));
+                    }
+                  });
+              });
               
               $("#CORP_CREATE_CERT").button().on("click", function(event) {
                   console.log('button', this.textContent);
@@ -508,6 +518,9 @@
             </span>
             <span class="btn">
             <button id="btn5" class="w200">추가 인증수단 삭제</button>
+            </span>
+            <span class="btn">
+            <button id="CERT_ISSUE_DATE" class="w200">인증서 발급일자 조회</button>
             </span>
             <span class="btn">
             <button id="btn10" class="w200">getAlpaVersion</button>
